--- a/chatWebApp/web/common/CSS/roomCss.css
+++ b/chatWebApp/web/common/CSS/roomCss.css
@@ -6,6 +6,14 @@ p{
 
 }
 
+li{
+
+    text-align: left;
+    font-family: arial;
+    font-size: 14px;
+
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width:200px;
@@ -15,10 +23,11 @@ p{
     border: 5px solid black;
     top:30%;
 
+
 }
 
 h1{
-    font-size: 12px;
+    font-size: 22px;
     color: black;
     font-family: arial black;
     text-align: center;
