--- a/chatWebApp/web/common/CSS/roomCss.css
+++ b/chatWebApp/web/common/CSS/roomCss.css
@@ -1,8 +1,18 @@
 p{
 
     text-align: center;
-    font-family: arial;
+    font-family:"Arial Black";
+    color:black;
     font-size: 12px;
+
+}
+
+td{
+
+    font-family:"Arial Black";
+    color:black;
+    font-size: 17px;
+
 
 }
 
@@ -10,25 +20,28 @@ li{
 
     text-align: left;
     font-family: arial;
-    font-size: 14px;
+    color:black;
+    font-size: 15px;
+
 
 }
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width:140px;
-    height:190px;
+    height:200px;
     margin: auto;
     text-align: center;
     font-family: arial;
-    border: 5px solid black;
+    border: 15px solid black;
+    border-image: url("../../common/images/cards-poker-border.jpg")12% round;
 
 
 
 }
 
 h1{
-    font-size: 22px;
+    font-size: 28px;
     color: black;
     font-family: arial black;
     text-align: center;
@@ -62,7 +75,7 @@ a {
 .card-small {
     border: .2em solid black;
     border-radius: 10%;
-    height: 75px;
+    height: 78px;
     width: 45px; /*70% of height*/
     margin-right: 5px;
     float: left;
@@ -91,18 +104,69 @@ a {
 .black {
     color: black;
 }
-button{
-    width: 100px;
+button {
     cursor:pointer;
-    background-color: green;
-    color:white;
-    font-weight:bold;
-    height:25px;
-    border:0px;
-    font-size: 12px
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 6px 14px;
+    border: 3px solid #465c2e;
+    border-radius: 9px;
+    background: #83ad56;
+    background: -webkit-gradient(linear, left top, left bottom, from(#83ad56), to(#465c2e));
+    background: -moz-linear-gradient(top, #83ad56, #465c2e);
+    background: linear-gradient(to bottom, #83ad56, #465c2e);
+    -webkit-box-shadow: #9dd067 0px 0px 31px 2px;
+    -moz-box-shadow: #9dd067 0px 0px 31px 2px;
+    box-shadow: #9dd067 0px 0px 31px 2px;
+    text-shadow: #29361b 1px 1px 1px;
+    font: normal normal bold 15px trebuchet ms;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.button:focus {
+    border: 3px solid #526c36;
+    background: #9dd067;
+    background: -webkit-gradient(linear, left top, left bottom, from(#9dd067), to(#546e37));
+    background: -moz-linear-gradient(top, #9dd067, #546e37);
+    background: linear-gradient(to bottom, #9dd067, #546e37);
+    color: #ffffff;
+    text-decoration: none;
+}
+.button:active {
+    background: #465c2e;
+    background: -webkit-gradient(linear, left top, left bottom, from(#465c2e), to(#465c2e));
+    background: -moz-linear-gradient(top, #465c2e, #465c2e);
+    background: linear-gradient(to bottom, #465c2e, #465c2e);
+}
+.button:before{
+    content:  "\0000a0";
+    display: inline-block;
+    height: 24px;
+    width: 24px;
+    line-height: 24px;
+    margin: 0 4px -6px -4px;
+    position: relative;
+    top: 0px;
+    left: 0px;
 
 }
+
+
+
 body{
 
-    background-image: url("../../common/images/background (2).jpg");
+    background-image: url("../../common/images/roomBackground (4).jpg");
+    background-size:100%;
+}
+
+h2{
+
+    font-size: 22px;
+    color: black;
+    font-family: arial black;
+
+
+
 }
