add error message when trying to upload game file that already exsits

--- a/chatWebApp/web/common/CSS/lobbyCss.css
+++ b/chatWebApp/web/common/CSS/lobbyCss.css
@@ -52,3 +52,11 @@ div {
 
 }
 
+#uploadFileButton:enabled {
+    background: #660000;
+}
+
+#uploadFileButton:disabled {
+    background: #dddddd;
+}
+
