--- a/chatWebApp/web/common/CSS/lobbyCss.css
+++ b/chatWebApp/web/common/CSS/lobbyCss.css
@@ -39,6 +39,19 @@ div {
 }
 
 
+#logoutButton{
+    position:fixed;
+    left:10px;
+    top:5px;
+
+    cursor:pointer;
+    background-color:#660000;
+    color:white;
+    font-weight:bold;
+    height:25px;
+    border:0px;
+    font-size: 12px
+}
 
 #uploadFileButton{
     cursor:pointer;
