--- a/chatWebApp/web/common/CSS/roomCss.css
+++ b/chatWebApp/web/common/CSS/roomCss.css
@@ -1,16 +1,4 @@
 
-@media screen and (max-width:900px){
-
-
-        .table
-        {
-            width: 80%;
-        }
-
-}
-
-
-
 p{
 
     text-align: center;
@@ -42,10 +30,21 @@ li{
 
 }
 
+		
+#Viewers {
+     list-style-type: lower-alpha;
+	text-align: left;
+    font-family: arial;
+    color:black;
+    font-size: 15px;
+
+}
+
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width:140px;
-    height:200px;
+    height:220px;
     margin: auto;
     text-align: center;
     font-family: arial;
