--- a/chatWebApp/web/common/CSS/roomCss.css
+++ b/chatWebApp/web/common/CSS/roomCss.css
@@ -187,7 +187,7 @@ button {
     animation-timing-function: linear;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-
+    visibility: hidden;
 
 
 }
